--- a/NyTimesPopularArticles/NyTimesPopularArticles/Views/Cells/MostPopularArticleTableViewCell.xib
+++ b/NyTimesPopularArticles/NyTimesPopularArticles/Views/Cells/MostPopularArticleTableViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,9 +16,50 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uop-72-FMz">
+                        <rect key="frame" x="20" y="0.0" width="280" height="180"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2fz-sE-IA6">
+                                <rect key="frame" x="0.0" y="65" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="BHD-36-zEh"/>
+                                    <constraint firstAttribute="width" constant="50" id="Lvu-9d-vlu"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forwardIcon" translatesAutoresizingMaskIntoConstraints="NO" id="dqJ-VS-Xpv">
+                                <rect key="frame" x="254" y="77" width="26" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="8Ai-oW-u3p"/>
+                                    <constraint firstAttribute="width" constant="26" id="pCF-q5-1wH"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dqJ-VS-Xpv" firstAttribute="centerY" secondItem="Uop-72-FMz" secondAttribute="centerY" id="IsD-uY-lgd"/>
+                            <constraint firstItem="2fz-sE-IA6" firstAttribute="centerY" secondItem="Uop-72-FMz" secondAttribute="centerY" id="MG7-ZF-8rk"/>
+                            <constraint firstItem="2fz-sE-IA6" firstAttribute="leading" secondItem="Uop-72-FMz" secondAttribute="leading" id="NlG-Gj-a4m"/>
+                            <constraint firstAttribute="trailing" secondItem="dqJ-VS-Xpv" secondAttribute="trailing" id="c5F-k5-mOf"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" name="tableBackgroundColor"/>
+                <constraints>
+                    <constraint firstItem="Uop-72-FMz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="5LU-Bm-eul"/>
+                    <constraint firstAttribute="bottom" secondItem="Uop-72-FMz" secondAttribute="bottom" id="CES-mm-RkU"/>
+                    <constraint firstAttribute="trailing" secondItem="Uop-72-FMz" secondAttribute="trailing" constant="20" id="OR2-vj-UPL"/>
+                    <constraint firstItem="Uop-72-FMz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="vQQ-UK-xZl"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="137.68115942028987" y="187.5"/>
+            <point key="canvasLocation" x="-122" y="46"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="forwardIcon" width="13" height="13"/>
+        <namedColor name="tableBackgroundColor">
+            <color red="0.98039215686274506" green="0.98039215686274506" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
