--- a/NyTimesPopularArticles/NyTimesPopularArticles/Views/Cells/MostPopularArticleTableViewCell.xib
+++ b/NyTimesPopularArticles/NyTimesPopularArticles/Views/Cells/MostPopularArticleTableViewCell.xib
@@ -34,13 +34,57 @@
                                     <constraint firstAttribute="width" constant="26" id="pCF-q5-1wH"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Civil Rights " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FIX-tE-7OE">
+                                <rect key="frame" x="65" y="124" width="70.5" height="36"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GQ4-UU-alB">
+                                <rect key="frame" x="135.5" y="136" width="103.5" height="24"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calenderIcon" translatesAutoresizingMaskIntoConstraints="NO" id="pce-30-z8R">
+                                        <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="uzD-JZ-qci"/>
+                                            <constraint firstAttribute="height" constant="24" id="wEs-Wj-ipn"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="2020-06-15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xC3-Ae-PVg">
+                                        <rect key="frame" x="24" y="0.0" width="79.5" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="bvP-20-eGP">
+                                <rect key="frame" x="65" y="20" width="174" height="81.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Civil Rights Law Protects Gay and Transgender Workers, Supreme Court Rules" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPZ-XS-YYz">
+                                        <rect key="frame" x="0.0" y="0.0" width="174" height="81.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="bvP-20-eGP" firstAttribute="leading" secondItem="2fz-sE-IA6" secondAttribute="trailing" constant="15" id="0fk-j4-Cvm"/>
+                            <constraint firstItem="bvP-20-eGP" firstAttribute="top" secondItem="Uop-72-FMz" secondAttribute="top" constant="20" symbolic="YES" id="Eik-hT-FB5"/>
+                            <constraint firstItem="GQ4-UU-alB" firstAttribute="bottom" secondItem="FIX-tE-7OE" secondAttribute="bottom" id="H4U-NC-Ocf"/>
                             <constraint firstItem="dqJ-VS-Xpv" firstAttribute="centerY" secondItem="Uop-72-FMz" secondAttribute="centerY" id="IsD-uY-lgd"/>
                             <constraint firstItem="2fz-sE-IA6" firstAttribute="centerY" secondItem="Uop-72-FMz" secondAttribute="centerY" id="MG7-ZF-8rk"/>
                             <constraint firstItem="2fz-sE-IA6" firstAttribute="leading" secondItem="Uop-72-FMz" secondAttribute="leading" id="NlG-Gj-a4m"/>
+                            <constraint firstItem="GQ4-UU-alB" firstAttribute="leading" secondItem="FIX-tE-7OE" secondAttribute="trailing" id="NtZ-8s-xBR"/>
+                            <constraint firstItem="dqJ-VS-Xpv" firstAttribute="leading" secondItem="bvP-20-eGP" secondAttribute="trailing" constant="15" id="PeU-mQ-9LX"/>
                             <constraint firstAttribute="trailing" secondItem="dqJ-VS-Xpv" secondAttribute="trailing" id="c5F-k5-mOf"/>
+                            <constraint firstItem="FIX-tE-7OE" firstAttribute="leading" secondItem="bvP-20-eGP" secondAttribute="leading" id="dGg-HH-LL9"/>
+                            <constraint firstItem="FIX-tE-7OE" firstAttribute="top" secondItem="bvP-20-eGP" secondAttribute="bottom" constant="22.5" id="eKL-Xw-BxK"/>
+                            <constraint firstItem="GQ4-UU-alB" firstAttribute="trailing" secondItem="bvP-20-eGP" secondAttribute="trailing" id="fgE-EZ-xld"/>
+                            <constraint firstAttribute="bottom" secondItem="FIX-tE-7OE" secondAttribute="bottom" constant="20" id="jKu-ud-CyF"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -53,10 +97,17 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="imgNews" destination="2fz-sE-IA6" id="OQD-Zx-uxR"/>
+                <outlet property="lblAuthor" destination="FIX-tE-7OE" id="kkg-yG-BI2"/>
+                <outlet property="lblDate" destination="xC3-Ae-PVg" id="Cyl-pF-HXK"/>
+                <outlet property="lblTitle" destination="fPZ-XS-YYz" id="l0w-WD-5z2"/>
+            </connections>
             <point key="canvasLocation" x="-122" y="46"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="calenderIcon" width="12" height="12"/>
         <image name="forwardIcon" width="13" height="13"/>
         <namedColor name="tableBackgroundColor">
             <color red="0.98039215686274506" green="0.98039215686274506" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
